--- a/demo.html
+++ b/demo.html
@@ -14,7 +14,7 @@
 
 <script>
 (function() {
-    var cors_api_host = 'cors-anywhere.herokuapp.com';
+    var cors_api_host = 'easy-gold-fish-slip.cyclic.app';
     var cors_api_url = 'https://' + cors_api_host + '/';
     var slice = [].slice;
     var origin = window.location.protocol + '//' + window.location.host;
